--- a/shared.gradle
+++ b/shared.gradle
@@ -48,6 +48,7 @@ tasks.withType(JavaCompile) {
 repositories {
     jcenter()
     mavenLocal()
+    maven { url 'https://mifos.jfrog.io/mifos/libs-snapshot/' }
 }
 
 dependencyManagement {
@@ -76,6 +77,22 @@ dependencies {
 jar {
     from sourceSets.main.allSource
 }
+
+artifactory {
+    contextUrl = System.getenv("ARTIFACTORY_URL")
+    publish {
+        repository {
+            repoKey = project.findProperty('artifactoryRepoKey')
+            username = System.getenv("ARTIFACTORY_USER")
+            password = System.getenv("ARTIFACTORY_PASSWORD")
+        }
+
+        defaults {
+            publications ('api', 'service', 'bootService', 'componentTest')
+        }
+    }
+}
+artifactoryPublish.dependsOn('clean','publishToMavenLocal')
 
 license {
     header rootProject.file('../HEADER')
