--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,13 @@ task artifactoryPublish {
 
 }
 
+task clean {
+    group 'all'
+    dependsOn gradle.includedBuild('api').task(':clean')
+    dependsOn gradle.includedBuild('service').task(':clean')
+    dependsOn gradle.includedBuild('component-test').task(':clean')
+}
+
 task prepareForTest {
     group 'all'
     dependsOn publishToMavenLocal
