--- a/service/build.gradle
+++ b/service/build.gradle
@@ -17,16 +17,13 @@
 
 buildscript {
     ext {
-        springBootVersion = '1.4.1.RELEASE'
+        springBootVersion = '1.4.3.RELEASE'
     }
 
     repositories {
         jcenter()
     }
 
-    dependencies {
-        classpath ("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
 }
 
 
@@ -34,11 +31,10 @@ plugins {
     id 'com.github.hierynomus.license' version '0.13.1'
     id("org.nosphere.apache.rat") version "0.3.1"
     id "com.jfrog.artifactory" version "4.9.5"
+    id "org.springframework.boot" version "1.4.3.RELEASE"
 }
 
 apply from: '../shared.gradle'
-
-apply plugin: 'spring-boot'
 
 springBoot {
     executable = true
