--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -35,6 +35,7 @@ plugins {
     id("org.nosphere.apache.rat") version "0.3.1"
     id "com.jfrog.artifactory" version "4.9.5"
     id "org.springframework.boot" version "1.4.3.RELEASE"
+    id 'maven-publish'
 }
 
 apply from: '../shared.gradle'
