--- a/api/build.gradle
+++ b/api/build.gradle
@@ -28,6 +28,7 @@ plugins {
     id "com.jfrog.artifactory" version "4.9.5"
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
     id 'maven-publish'
+    id 'java'
 }
 
 apply from: '../shared.gradle'
