--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -36,6 +36,7 @@ plugins {
     id "com.jfrog.artifactory" version "4.9.5"
     id "org.springframework.boot" version "1.4.3.RELEASE"
     id 'maven-publish'
+    id 'java'
 }
 
 apply from: '../shared.gradle'
