--- a/shared.gradle
+++ b/shared.gradle
@@ -16,14 +16,14 @@
  */
 
 group 'org.apache.fineract.cn.provisioner'
-version '0.1.0-BUILD-SNAPSHOT'
+version '0.0.x-SNAPSHOT'
 
 ext.versions = [
         fineractidentityservice : '0.1.0-BUILD-SNAPSHOT',
-        frameworkanubis         : '0.1.0-BUILD-SNAPSHOT',
+        frameworkanubis         : '0.0.x-SNAPSHOT',
         frameworkanput          : '0.1.0-BUILD-SNAPSHOT',
         frameworkapi            : '0.1.0-BUILD-SNAPSHOT',
-        frameworklang           : '0.1.0-BUILD-SNAPSHOT',
+        frameworklang           : '0.0.x-SNAPSHOT',
         frameworkasync          : '0.1.0-BUILD-SNAPSHOT',
         frameworkcassandra      : '0.1.0-BUILD-SNAPSHOT',
         frameworkmariadb        : '0.1.0-BUILD-SNAPSHOT',
