--- a/shared.gradle
+++ b/shared.gradle
@@ -26,7 +26,7 @@ ext.versions = [
         frameworklang           : '0.0.x-SNAPSHOT',
         frameworkasync          : '0.1.0-BUILD-SNAPSHOT',
         frameworkcassandra      : '0.1.0-BUILD-SNAPSHOT',
-        frameworkmariadb        : '0.1.0-BUILD-SNAPSHOT',
+        frameworkpostgres       : '0.1.0-BUILD-SNAPSHOT',
         frameworkcrypto         : '0.1.0-BUILD-SNAPSHOT',
         frameworktest           : '0.1.0-BUILD-SNAPSHOT',
         springcontext           : '4.3.3.RELEASE',
@@ -61,7 +61,7 @@ ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
 dependencies {
     compile(
             [group: 'com.google.code.findbugs', name: 'jsr305'],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.0-BUILD-SNAPSHOT'],
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version: versions.frameworkpostgres],
             [group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4']
     )
 
